# qbasic-rs

./: .gitignore  ARCHITECTURE.md  BLACKJACK.md  CLAUDE.md  Cargo.toml  README.md  code_stats.md  donkey.md  gorillas.md  money.md  reversi.md  rust-skill-updated.md  torus.md
basic-src/: 256c.bas  WORLD1.TXT  WORLD2.TXT  WORLD3.TXT  aster7.bas  bench.bas  blackjack.bas  blackjak.bas  build-all.sh  build-debug.sh  build-one.sh  demo.bas  demo1.bas  donkey.bas  duck.bas  etto.bas  evil.bas  farkle.bas  fuzzbuzz.bas  gorilla  gorilla.bas  gotorama.bas  hangman-gfx.bas  hangman-gw.bas  hangman.bas  hello-world.bas  invaders.bas  kingdom.bas  kitchen_sink-gw.bas  kitchen_sink-qbasic.bas  loopyloop.bas  mandel.bas  mario.bas  money.bas  onerror.bas  palette256_expanded.bas  pi-gw.bas  pi.bas  pin.bas  pixel-gw.bas  (+22 more)
docs/: ARCHITECTURE.md  demo.md  donkey.md  gorillas.md  mario.md  money.md  qb11-rules.md
runtime/: Cargo.toml
runtime/src/: lib.rs  sound.rs
runtime/tests/: draw_test.rs
samples/: 256c.rs  README.MD  donkey.rs  fuzzbuzz.rs  gorilla.rs  hangman-gfx.rs  hangman-gw.rs  hangman.rs  hello-world.rs  kitchen_sink-gw.rs  loopyloop.rs  mandel.rs  money.rs  nibbles.rs  palette256_expanded.rs  pi-gw.rs  pi.rs  pixel-gw.rs  primes.rs  q_sort.rs  qblocks.rs  random-pixel.rs  reversi.rs  screen13-sprite.rs  screen13.rs  sortdemo.rs  sound.rs  step.rs  torus.rs
src/: analyzer.rs  emitter.rs  error.rs  lexer.rs  main.rs  parser.rs
src/emitter/: helpers.rs  mod.rs  postprocess.rs  scan.rs
tests/: README.md  run-graphics-tests.sh  run-tests.sh
tools/: ppm2png.py
(+110 files in other folders)
